# nChain

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: bots.rst  changelog.rst  chunkers.rst  conf.py  config.rst  embedders.rst  index.rst  loaders.rst  models.rst  pipeline.rst  utils.rst  vectordb.rst
nanochain/: __init__.py  app.py  cli.py
nanochain/bots/: base_bot.py  telegram_bot.py
nanochain/chunkers/: base_chunker.py  sqlite_chunker.py
nanochain/cli/: cli.py
nanochain/embedders/: __init__.py  base_embedder.py  sentence_transformer_embedder.py  sentence_transformers_embedder.py
nanochain/loaders/: __init__.py  arxiv_loader.py  base_loader.py  pdf_loader.py  sqlite_loader.py  text_loader.py
nanochain/models/: dynamic_model_generator.py
nanochain/pipeline/: data_pipeline.py
nanochain/utils/: dynamic_model_generator.py  sqlite_logger.py
nanochain/vectordb/: __init__.py  base_vectordb.py  faiss_vectordb.py  sqlite_vectordb.py
nchain/: __init__.py  app.py  cli.py
nchain/bots/: base_bot.py  bot_plugin_manager.py  telegram_bot.py
nchain/chunkers/: __init__.py  base_chunker.py  sentence_chunker.py  sqlite_chunker.py  text_chunker.py
nchain/config/: config_module.py
nchain/embedders/: huggingface_embedder.py  sentence_transformers_embedder.py
nchain/loaders/: __init__.py  arxiv_loader.py  pdf_loader.py  sitemap_loader.py  sqlite_loader.py
nchain/models/: core.py  generic_model.py
nchain/pipeline/: __init__.py  data_pipeline.py
nchain/utils/: detection.py  helpers.py  sqlite_logger.py
nchain/vectordb/: __init__.py  base_vectordb.py  faiss_vectordb.py  sqlite_vectordb.py
scripts/: create_testdb.py
tests/: conftest.py  test_app.py
tests/bots/: test_base_bot.py
tests/chunkers/: test_sentence_chunker.py  test_sql_chunker.py
tests/embedders/: test_sentence_transformer_embedder.py  test_sentence_transformers_embedder.py
tests/loaders/: test_arxiv_loader.py  test_sitemap_loader.py  test_sqlite_loader.py
tests/models/: test_core.py  test_dynamic_model_generator.py
tests/pipeline/: test_data_pipeline.py
tests/resources/: papers.db  test.db
tests/vectordb/: test_faiss_vectordb.py  test_sqlite_vectordb.py
