[tool.poetry]
name = "nChain"
version = "0.13.post2"
description = "nchain is a flexible and efficent framework to create LLM bots using embeddings over extensible dataset"
authors = ["James Liu <james@bayjarvis.com>"]
license = "Apache License"
readme = "README.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"nchain/__init__.py" = ["E401"]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants.d
  | \.pytype
  | \.ruff_cache
  | \.svn
  | \.tox
  | \.venv
  | __pypackages__
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | venv
)/
'''

[tool.black.format]
color = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
openai = "^0.27.5"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
pypdf = "^3.11.0"
click = "^8.1.7"
arxiv = "^1.4.8"
sqlite-utils = "^3.35.1" # replace with the version you need
nltk = ">=3.5"
sentence-transformers = "^2.2.2"
pydantic = "^2.4.2"
numpy = "^1.26.0"
annoy = "^1.17.3"
faiss-gpu = "^1.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.2"
ruff = "^0.0.220"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-env = "^0.8.1"
click = "^8.1.3"
isort = "^5.12.0"

[tool.poetry.extras]
opensource = ["sentence-transformers", "torch"]
test = ["pytest"]

[tool.poetry.group.docs.dependencies]

[tool.poetry.scripts]
nchain = "nchain.cli:cli"
